Fix some typos, code smells